Update index.html with header image

--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
 <body>
 
     <header>
+        <img src="logo.png" alt="AI Logotyp" class="ai-logo">
         <h1>Artificiell Intelligens</h1>
         <p class="intro">
-            Artificiell intelligens handlar om att skapa system som efterliknar mänsklig intelligens för att lösa problem och dra slutsatser[cite: 7]. 
-            Genom att kombinera matematik, programmering och stora mängder data kan vi skapa tekniska lösningar som lär sig av erfarenhet[cite: 12, 18].
+            Artificiell intelligens handlar om att skapa system som efterliknar mänsklig intelligens för att lösa problem och dra slutsatser.
+            Genom att kombinera matematik, programmering och stora mängder data kan vi skapa tekniska lösningar som lär sig av erfarenhet.
         </p>
     </header>
 
@@ -59,7 +60,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2026 Utbildningsmaterial för Artificiell Intelligens (ARTI1000X)</p>
+        <p>&copy; 2026 Artificiell Intelligens</p>
     </footer>
     
 </body>
